Add qa env travis step

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ notifications:
 
 # http://docs.travis-ci.com/user/deployment/
 after_success:
+  - if [[ "${TRAVIS_BRANCH}" =~ ^refactor/avs_calling_api$ ]] && [ "${TRAVIS_PULL_REQUEST}" == "false" ]; then yarn build:prod; fi
   - if [[ "${TRAVIS_BRANCH}" =~ ^(dev|edge)$ ]] && [ "${TRAVIS_PULL_REQUEST}" == "false" ]; then yarn build:prod; fi
   - |
     if [[ "${TRAVIS_TAG}" =~ .*-staging.* ]]; then
